src/main/java/com/example/stream/spring/courses/reactive/example/model/error/StudentNotFound.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record StudentNotFound() implements StudentError {
}
